# fram-engine

./: .gitignore  README.md
FarmEngine/: .gitignore  ARQUITECTURA.md  CMakeLists.txt  CMakeLists_test.txt  README.md  test_logger.cpp
FarmEngine/assets/shaders/: sprite.frag.glsl  sprite.vert.glsl  terrain.frag.glsl  terrain.vert.glsl
FarmEngine/audio/: AudioSystem.cpp  AudioSystem.h
FarmEngine/core/: Engine.cpp  Engine.h
FarmEngine/core/ecs/: ECS.cpp  ECS.h
FarmEngine/core/jobsystem/: JobSystem.cpp  JobSystem.h
FarmEngine/core/logger/: Logger.cpp  Logger.h
FarmEngine/core/memory/: MemoryManager.cpp  MemoryManager.h
FarmEngine/physics/: PhysicsWorld.cpp  PhysicsWorld.h
FarmEngine/platform/input/: Input.cpp  Input.h
FarmEngine/platform/window/: Window.cpp  Window.h
FarmEngine/plugins/: IPlugin.h
FarmEngine/renderer/: Renderer.cpp  Renderer.h
FarmEngine/renderer/2d/: SpriteRenderer.h
FarmEngine/renderer/3d/: AdvancedRenderers.h  MeshRenderer.h
FarmEngine/renderer/passes/: RenderPasses.h
FarmEngine/renderer/pipeline/: PipelineSystem.h
FarmEngine/renderer/rendergraph/: RenderGraph.h
FarmEngine/renderer/resource/: ResourceSystem.h
FarmEngine/renderer/vulkan/: VulkanContext.h
FarmEngine/simulation/: Simulation.cpp  Simulation.h
FarmEngine/simulation/animals/: AnimalSystem.h
FarmEngine/simulation/crops/: CropSystem.h
FarmEngine/simulation/soil/: SoilSystem.h
FarmEngine/simulation/weather/: WeatherSystem.h
FarmEngine/src/rendering/graph/: ExampleUsage.h  README.md  RenderGraph.cpp  RenderGraph.h  RenderPipeline.cpp  RenderPipeline.h
FarmEngine/tools/editor/: Editor.h
FarmEngine/tools/inspector/: Inspector.h
FarmEngine/world/: World.cpp  World.h
FarmEngine/world/chunks/: ChunkSystem.cpp  ChunkSystem.h
FarmEngine/world/terrain/: TerrainGenerator.h
FarmEngine/world/tiles/: Tilemap.h
